--- a/.github/workflows/DeployAppService.yml
+++ b/.github/workflows/DeployAppService.yml
@@ -27,6 +27,8 @@ env:
 on:
   push:
     branches: [ "master" ]
+    paths-ignore:
+      - '.github/workflows/**'
   workflow_dispatch:
 
 permissions:
