--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ appsettings.json
 *.appsettings.json
 *appsettings.json
 *.Development.json
+*Development.json
+appsettings.Development.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -366,3 +368,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Microsoft.OpenAIRateLimiter.UI.sln
+/Microsoft.OpenAIRateLimiter.UI/appsettings.Development.json
