--- a/Microsoft.OpenAIRateLimiter.UI/Microsoft.OpenAIRateLimiter.UI.csproj
+++ b/Microsoft.OpenAIRateLimiter.UI/Microsoft.OpenAIRateLimiter.UI.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Core" Version="1.35.0" />
+    <PackageReference Include="Azure.Identity" Version="1.10.1" />
+    <PackageReference Include="Azure.ResourceManager.ApiManagement" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
